fixed portfolio header gap

--- a/app/main/main.css
+++ b/app/main/main.css
@@ -315,7 +315,7 @@ a.thanks-button:hover{
     line-height: 14.5vw;
   }
   .proj-blank{
-    height: 1vw;
+    height: 7vw;
   }
   .about-div p,
   .about-div ul{
